qa: decreased footer text size to prevent side scrolling on mobile

--- a/css/site.scss
+++ b/css/site.scss
@@ -615,7 +615,7 @@ ul.tag-list li.last{margin-right: 0px;}
         }
     }
     .border{
-        width:64%;
+        width:74%;
         margin: 15px 0 0;
         border-top: 3px solid #808080;
     }
@@ -660,7 +660,7 @@ ul.tag-list li.last{margin-right: 0px;}
     color: #fff;
     p{
         line-height: 18px;
-        font-size: 16px;
+        font-size: 14px;
         color: #D1D1D1;
         padding: 0;
     }
